implementation of being flexible to different norms

--- a/squad/1_Generate_Mean_Unit_Vectors_From_Elmo_Embeddings.ipynb
+++ b/squad/1_Generate_Mean_Unit_Vectors_From_Elmo_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#dataset_type = 'train'\n",
     "dataset_type = 'dev'\n",
     "dataset_version = 'v1.1'\n",
-    "\n",
     "index_field = ['Unnamed: 0']\n",
     "\n",
     "# required files\n",
@@ -37,26 +36,18 @@
     "_embedding_question_file_as_h5py_name = 'elmo_question_embeddings.hdf5'\n",
     "embedding_question_file_as_h5py = os.path.join(datadir, _embedding_question_file_as_h5py_name)\n",
     "\n",
-    "_embedding_mean_paragraph_file_as_h5py_name = 'elmo_mean_paragraph_embeddings.hdf5'\n",
+    "_embedding_mean_paragraph_file_as_h5py_name = 'elmo_{}_mean_paragraph_embeddings.hdf5'\n",
     "embedding_mean_paragraph_file_as_h5py = os.path.join(datadir, _embedding_mean_paragraph_file_as_h5py_name)\n",
     "\n",
-    "_embedding_mean_question_file_as_h5py_name = 'elmo_mean_question_embeddings.hdf5'\n",
+    "_embedding_mean_question_file_as_h5py_name = 'elmo_{}_mean_question_embeddings.hdf5'\n",
     "embedding_mean_question_file_as_h5py = os.path.join(datadir, _embedding_mean_question_file_as_h5py_name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "question is getting processed!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dims = 1024\n",
     "items = [dict({'type':'question', \n",
@@ -111,14 +102,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for vals in items:\n",
-    "    print(vals['type'], 'is getting processed!!!')    \n",
-    "    with h5py.File(vals['destination_file'], 'w') as fout: \n",
-    "        for i, _ in enumerate(tqdm_notebook(vals['norm_matrix'], total=len(vals['norm_matrix']))):\n",
-    "            ds = fout.create_dataset(\n",
-    "                            '{}'.format(i),\n",
-    "                            _.shape, dtype='float32',\n",
-    "                            data=_)\n",
+    "for norm_type in ['l1', 'l2']:\n",
+    "    QUES_Mean = items[0]['matrix']\n",
+    "    PARA_Mean = items[1]['matrix']\n",
+    "    QUES_Norms = normalize(QUES_Mean, norm=norm_type)\n",
+    "    PARA_Norms = normalize(PARA_Mean, norm=norm_type)\n",
+    "    items[0]['norm_matrix'] = QUES_Norms\n",
+    "    items[1]['norm_matrix'] = PARA_Norms\n",
+    "    for vals in items:\n",
+    "        print(vals['type'], 'is getting processed!!!')    \n",
+    "        with h5py.File(vals['destination_file'].format(norm_type), 'w') as fout: \n",
+    "            for i, _ in enumerate(tqdm_notebook(vals['norm_matrix'], total=len(vals['norm_matrix']))):\n",
+    "                ds = fout.create_dataset(\n",
+    "                                '{}'.format(i),\n",
+    "                                _.shape, dtype='float32',\n",
+    "                                data=_)\n",
     "        "
    ]
   }
