--- a/squad/trash_trials.ipynb
+++ b/squad/trash_trials.ipynb
@@ -302,6 +302,54 @@
     "                        mean_vector.shape, dtype='float32',\n",
     "                        data=mean_vector)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = np.empty((0, 8), dtype=float)\n",
+    "q = np.append(q, [[2, 0, 1, 1, 0, 2, 1, 1]], axis=0)\n",
+    "\n",
+    "p = np.empty((0, 8), dtype=float)\n",
+    "p = np.append(p, [[7, 5, 23, 0, 1, 1, 1, 1]], axis=0)\n",
+    "p = np.append(p, [[2, 1, 1, 0, 1, 1, 1, 1]], axis=0)\n",
+    "p = np.append(p, [[2, 1, 1, 0, 1, 1, 1, 0]], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalize(x, norm='l2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "for q_id, _ in enumerate(tqdm_notebook(q, total=len(p))):\n",
+    "    q_vec = np.array([_]) \n",
+    "    sk_sim = cosine_similarity(q_vec,p)[0]\n",
+    "    actual_paragraph_id = 0 #df_qas[df_qas['Question_Id'] == q_id]['Paragraph_Id'].values[0]\n",
+    "    similarities = np.argsort(-sk_sim)\n",
+    "    print('actual_paragraph_id', actual_paragraph_id)\n",
+    "    print('sk_sim:', sk_sim)\n",
+    "    print('similarities (argsort):', similarities)\n",
+    "    order_of_the_actual_paragraph_id = np.where(similarities == actual_paragraph_id)[0][0] + 1\n",
+    "    print('order_of_the_actual_paragraph_id:', order_of_the_actual_paragraph_id)\n",
+    "    print('score for actual paragraph id:', sk_sim[actual_paragraph_id])\n",
+    "    calculated_most_similar_1_paragraph = similarities[0]\n",
+    "    print('calculated_most_similar_1_paragraph:', calculated_most_similar_1_paragraph)\n",
+    "    print('score for most similar paragraph:', sk_sim[calculated_most_similar_1_paragraph])\n",
+    "    #     results.append((q_id, actual_paragraph_id,  order_of_the_actual_paragraph_id, calculated_most_similar_1_paragraph, sk_sim[calculated_most_similar_1_paragraph]))\n"
+   ]
   }
  ],
  "metadata": {
