implementation of being flexible to different norms

--- a/squad/1_Generate_Mean_Unit_Vectors_From_Elmo_Embeddings.ipynb
+++ b/squad/1_Generate_Mean_Unit_Vectors_From_Elmo_Embeddings.ipynb
@@ -27,7 +27,7 @@
     "index_field = ['Unnamed: 0']\n",
     "\n",
     "# required files\n",
-    "_basepath = '/home/jackalhan/Development/github/bilm-tf/squad/'\n",
+    "_basepath = '/home/jackalhan/Development/github/more_meaningful_representations/squad/'\n",
     "datadir = os.path.join(_basepath, dataset_type)\n",
     "modeldir = os.path.join(_basepath, 'model')\n",
     "_embedding_paragraph_file_as_h5py_name = 'elmo_paragraph_embeddings.hdf5'\n",
@@ -50,17 +50,17 @@
    "outputs": [],
    "source": [
     "dims = 1024\n",
-    "items = [dict({'type':'question', \n",
+    "items = [dict({'type':'Questions', \n",
     "                     'matrix': np.empty((0, dims), dtype=float),\n",
     "                     'source_file':embedding_question_file_as_h5py,\n",
     "                     'destination_file': embedding_mean_question_file_as_h5py}), \n",
-    "              dict({'type':'paragraph', \n",
+    "              dict({'type':'Paragraphs', \n",
     "                     'matrix': np.empty((0, dims), dtype=float),\n",
     "                     'source_file':embedding_paragraph_file_as_h5py,\n",
     "                     'destination_file': embedding_mean_paragraph_file_as_h5py})\n",
     "              ]\n",
     "for vals in items:\n",
-    "    print(vals['type'], 'is getting processed!!!')    \n",
+    "    print(vals['type'], 'are getting processed!!!')    \n",
     "    with h5py.File(vals['source_file'], 'r') as fin:        \n",
     "        for _ in tqdm_notebook(fin, total=len(fin)):             \n",
     "            vec = np.array(fin[str(_)][...])\n",
@@ -79,38 +79,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QUES_Mean = items[0]['matrix']\n",
-    "PARA_Mean = items[1]['matrix']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#QUES_Norms = QUES_Mean / np.linalg.norm(QUES_Mean, ord=2)\n",
-    "QUES_Norms = normalize(QUES_Mean, norm='l2')\n",
-    "PARA_Norms = normalize(PARA_Mean, norm='l2')\n",
-    "items[0]['norm_matrix'] = QUES_Norms\n",
-    "items[1]['norm_matrix'] = PARA_Norms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for norm_type in ['l1', 'l2']:\n",
+    "    print(10*'*', norm_type.upper(),'NORM', 10*'*')\n",
     "    QUES_Mean = items[0]['matrix']\n",
     "    PARA_Mean = items[1]['matrix']\n",
+    "    #QUES_Norms = QUES_Mean / np.linalg.norm(QUES_Mean, ord=2)\n",
     "    QUES_Norms = normalize(QUES_Mean, norm=norm_type)\n",
     "    PARA_Norms = normalize(PARA_Mean, norm=norm_type)\n",
     "    items[0]['norm_matrix'] = QUES_Norms\n",
     "    items[1]['norm_matrix'] = PARA_Norms\n",
     "    for vals in items:\n",
-    "        print(vals['type'], 'is getting processed!!!')    \n",
+    "        print(vals['type'], 'are getting processed!!!')    \n",
     "        with h5py.File(vals['destination_file'].format(norm_type), 'w') as fout: \n",
     "            for i, _ in enumerate(tqdm_notebook(vals['norm_matrix'], total=len(vals['norm_matrix']))):\n",
     "                ds = fout.create_dataset(\n",
