Clean the experimentation iPy file

--- a/squad/trash_trials.ipynb
+++ b/squad/trash_trials.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jackalhan/Development/github/bilm-tf/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import h5py\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,142 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INPUT\n",
-      "[[[0.14361286 0.74463546 0.05528474 ... 0.42196012 0.83750486 0.32525635]\n",
-      "  [0.8512775  0.40255404 0.6226797  ... 0.9696106  0.5934336  0.24274111]\n",
-      "  [0.29692662 0.8753855  0.28486526 ... 0.33133066 0.5703893  0.58597136]\n",
-      "  ...\n",
-      "  [0.29707527 0.51404476 0.9240384  ... 0.34801102 0.2070018  0.25367928]\n",
-      "  [0.78632    0.36166894 0.41988075 ... 0.8387991  0.7794237  0.6020839 ]\n",
-      "  [0.13407731 0.9202765  0.29769742 ... 0.3187636  0.06853759 0.86523616]]\n",
-      "\n",
-      " [[0.7800853  0.72759056 0.7789978  ... 0.67362404 0.9373268  0.42324948]\n",
-      "  [0.37501156 0.8671254  0.78329694 ... 0.5555297  0.54702055 0.6134634 ]\n",
-      "  [0.96783996 0.40766132 0.52161574 ... 0.35092616 0.90680766 0.9696127 ]\n",
-      "  ...\n",
-      "  [0.41031122 0.18462563 0.9901916  ... 0.69740224 0.1939987  0.6404489 ]\n",
-      "  [0.8943119  0.26174676 0.8990778  ... 0.17971289 0.2937343  0.3150028 ]\n",
-      "  [0.16068578 0.6621947  0.736832   ... 0.26410758 0.33290815 0.64911294]]\n",
-      "\n",
-      " [[0.02733278 0.7306404  0.77339077 ... 0.8486546  0.28127265 0.78303254]\n",
-      "  [0.50643885 0.48914862 0.3480724  ... 0.05071056 0.12581313 0.29332268]\n",
-      "  [0.25850832 0.63159037 0.09011614 ... 0.72232604 0.53313196 0.20330274]\n",
-      "  ...\n",
-      "  [0.58070576 0.07382929 0.33641398 ... 0.60337627 0.9115578  0.20375633]\n",
-      "  [0.38657224 0.679922   0.10161757 ... 0.36153734 0.42531157 0.79473567]\n",
-      "  [0.7353766  0.60335934 0.01275849 ... 0.45492113 0.08748543 0.6904868 ]]]\n",
-      "REDUCE MEAN\n",
-      "0.49971172\n",
-      "REDUCE MEAN (shape)\n",
-      "()\n",
-      "REDUCE MEAN AXIS 0\n",
-      "[[0.52512276 0.69744754 0.57575506 ... 0.5064736  0.6779626  0.37127292]\n",
-      " [0.5700219  0.25547326 0.6240194  ... 0.6102304  0.39254162 0.29658878]\n",
-      " [0.4221017  0.4760894  0.67121965 ... 0.4927703  0.6974856  0.4759203 ]\n",
-      " ...\n",
-      " [0.30600163 0.38830099 0.73679066 ... 0.5463185  0.30655774 0.6121579 ]\n",
-      " [0.4967188  0.34441635 0.4633226  ... 0.34129754 0.45764837 0.36081263]\n",
-      " [0.49190673 0.51878124 0.5430617  ... 0.50798774 0.32223964 0.8521989 ]]\n",
-      "REDUCE MEAN AXIS 0 (shape)\n",
-      "(150, 1024)\n",
-      "REDUCE MEAN AXIS 1\n",
-      "[[0.5247301  0.5200287  0.45076293 ... 0.47861195 0.46145594 0.51571983]\n",
-      " [0.5247832  0.5180387  0.48673746 ... 0.48317927 0.4876178  0.4951128 ]\n",
-      " [0.4883962  0.5559886  0.51088804 ... 0.51572263 0.49095723 0.54130256]]\n",
-      "REDUCE MEAN AXIS 1 (shape)\n",
-      "(3, 1024)\n",
-      "REDUCE MEAN AXIS 2\n",
-      "[[0.50242007 0.5043273  0.5039791  0.50021815 0.48887998 0.49014947\n",
-      "  0.5041092  0.4771374  0.49537688 0.501704   0.50020957 0.5103526\n",
-      "  0.49374434 0.49090505 0.49744457 0.4995126  0.5080877  0.505985\n",
-      "  0.5040448  0.5040179  0.5201179  0.5209488  0.5005216  0.49165863\n",
-      "  0.49491146 0.5060661  0.4775681  0.5151518  0.5064869  0.5092\n",
-      "  0.49982804 0.48089316 0.4947342  0.48601755 0.5071826  0.4986003\n",
-      "  0.49588442 0.499237   0.48381007 0.50094295 0.50575817 0.48743117\n",
-      "  0.512001   0.50645614 0.4879952  0.48261756 0.49502861 0.49739835\n",
-      "  0.49856263 0.5046352  0.4850013  0.49162412 0.52288777 0.49552172\n",
-      "  0.4922529  0.5269753  0.51844335 0.51080835 0.48966855 0.48809066\n",
-      "  0.50741136 0.49883735 0.5027876  0.5077907  0.4906262  0.48713467\n",
-      "  0.4973373  0.5169912  0.5106939  0.49195483 0.48864895 0.4983005\n",
-      "  0.48512632 0.50237477 0.4919669  0.4908981  0.5032516  0.51528746\n",
-      "  0.51062465 0.50252664 0.5020946  0.5083734  0.5086564  0.5009986\n",
-      "  0.5046688  0.5104188  0.49509218 0.49520242 0.5044532  0.51142275\n",
-      "  0.5137111  0.49128115 0.49993125 0.4958377  0.50215054 0.50338787\n",
-      "  0.517015   0.5014354  0.5167225  0.48008668 0.5052512  0.4999898\n",
-      "  0.5205087  0.49503332 0.49393928 0.4963057  0.49883533 0.51881284\n",
-      "  0.5180007  0.5056397  0.50687945 0.50064003 0.5051527  0.5189388\n",
-      "  0.5198077  0.49860704 0.495916   0.4864564  0.48969388 0.50056124\n",
-      "  0.5016855  0.4932513  0.4875694  0.4881832  0.50653195 0.49392235\n",
-      "  0.4994749  0.50429326 0.5026292  0.49860817 0.48088354 0.50081086\n",
-      "  0.5089407  0.5044222  0.49364227 0.5053251  0.49630874 0.4925555\n",
-      "  0.4817326  0.49416152 0.4824612  0.49838454 0.49298128 0.5041182\n",
-      "  0.5031945  0.5029114  0.5048045  0.5061271  0.4973501  0.5124653 ]\n",
-      " [0.5120753  0.51360536 0.5120009  0.51284254 0.5052352  0.50045323\n",
-      "  0.4957288  0.49518043 0.49209368 0.5101702  0.48744226 0.4953684\n",
-      "  0.49721205 0.50455236 0.48726678 0.47812086 0.49072242 0.50020975\n",
-      "  0.5043619  0.49615896 0.50148267 0.5018262  0.49399152 0.5093586\n",
-      "  0.5073639  0.492544   0.51418316 0.5067107  0.49047714 0.4934314\n",
-      "  0.49004546 0.5203018  0.50753266 0.5037274  0.50577176 0.5006193\n",
-      "  0.5140388  0.49697894 0.5022861  0.49939004 0.50645554 0.5000404\n",
-      "  0.49495995 0.48834878 0.50778323 0.5041199  0.5083971  0.48754567\n",
-      "  0.50035703 0.49570543 0.49394935 0.49512672 0.51334476 0.50120926\n",
-      "  0.5046841  0.50970507 0.50877833 0.5033964  0.49119365 0.50190264\n",
-      "  0.51265544 0.5097398  0.49590057 0.50131595 0.4909315  0.4950881\n",
-      "  0.48126593 0.50969255 0.48784822 0.49357307 0.50252676 0.509154\n",
-      "  0.48934788 0.5068491  0.49245384 0.4889622  0.5022779  0.4918812\n",
-      "  0.48797646 0.5064794  0.49160475 0.49748632 0.50514585 0.4990753\n",
-      "  0.5040021  0.510715   0.48901308 0.5073353  0.49033535 0.49165156\n",
-      "  0.5035156  0.5048553  0.49655595 0.51342684 0.49599206 0.50639415\n",
-      "  0.50475425 0.50700134 0.492042   0.5019311  0.49679974 0.48941997\n",
-      "  0.51861656 0.49681932 0.4814574  0.49932355 0.49943003 0.49196732\n",
-      "  0.5060014  0.50365496 0.49430847 0.5165497  0.49164388 0.49319756\n",
-      "  0.48879918 0.50724834 0.49797451 0.5015426  0.49735963 0.48764467\n",
-      "  0.49499202 0.4821741  0.49484536 0.49196154 0.50503325 0.492632\n",
-      "  0.49204925 0.5017832  0.5035399  0.5053873  0.49064565 0.4863443\n",
-      "  0.5142877  0.48533505 0.5053679  0.493086   0.50546736 0.5017451\n",
-      "  0.49706233 0.5049333  0.5027089  0.5006211  0.49181992 0.5004193\n",
-      "  0.4913064  0.5080894  0.51222056 0.48443872 0.5075967  0.5086814 ]\n",
-      " [0.5019659  0.50776494 0.4965474  0.5091024  0.49323097 0.5066397\n",
-      "  0.4964579  0.4946317  0.4863109  0.49830556 0.49279135 0.49800164\n",
-      "  0.4904255  0.49946663 0.4895081  0.504876   0.50333923 0.50376666\n",
-      "  0.5120394  0.51522356 0.5076456  0.50955284 0.49740145 0.5020057\n",
-      "  0.49184322 0.5002613  0.5064514  0.50302875 0.49793172 0.4967307\n",
-      "  0.5098343  0.49308723 0.51095945 0.5177386  0.5018494  0.49227124\n",
-      "  0.4946609  0.51032984 0.5016513  0.5024429  0.50432265 0.48911074\n",
-      "  0.5075072  0.50344306 0.49705875 0.51688033 0.5196329  0.5064131\n",
-      "  0.50402343 0.49408323 0.48742992 0.50134    0.5032703  0.50651324\n",
-      "  0.49435315 0.5089998  0.48872828 0.49773672 0.4898006  0.5049782\n",
-      "  0.51098377 0.48880708 0.5020144  0.49811995 0.5093477  0.48530364\n",
-      "  0.5070048  0.5056157  0.5009775  0.5143667  0.49066663 0.49411017\n",
-      "  0.5016013  0.5127604  0.5004666  0.5071571  0.50709826 0.49875098\n",
-      "  0.5044946  0.49990067 0.50560117 0.51979804 0.50786597 0.49512005\n",
-      "  0.47231016 0.50364107 0.49779835 0.49497375 0.5036749  0.5029915\n",
-      "  0.5037104  0.4955099  0.50554514 0.49919766 0.49304134 0.50171185\n",
-      "  0.49805686 0.5105939  0.49230212 0.5003674  0.49887246 0.5073447\n",
-      "  0.5117313  0.5029121  0.49053848 0.50216043 0.5120993  0.49420065\n",
-      "  0.5199971  0.50530076 0.5103589  0.49742645 0.53223246 0.4870426\n",
-      "  0.51106185 0.4848     0.50040394 0.49363    0.50094604 0.49609667\n",
-      "  0.50109977 0.49263608 0.5173416  0.49549434 0.50794363 0.5039189\n",
-      "  0.50891066 0.49523237 0.5100342  0.49108428 0.49834245 0.4979328\n",
-      "  0.5087775  0.49465856 0.5096775  0.51222503 0.49221557 0.5138406\n",
-      "  0.5137484  0.50964165 0.48674798 0.49510348 0.52039194 0.5115186\n",
-      "  0.4881859  0.49377853 0.5072457  0.5061797  0.49955016 0.49610287]]\n",
-      "REDUCE MEAN AXIS 2 (shape)\n",
-      "(3, 150)\n",
-      "REDUCE MEAN AXIS 0,1\n",
-      "[0.50913197 0.48908952 0.50308615 ... 0.5092334  0.5095763  0.48045328]\n",
-      "REDUCE MEAN AXIS 0,1 (shape)\n",
-      "(1024,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"INPUT\")\n",
     "print(session.run(a))\n",
@@ -227,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,11 +167,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "q = np.empty((0, 8), dtype=float)\n",
     "q = np.append(q, [[2, 0, 1, 1, 0, 2, 1, 1]], axis=0)\n",
     "\n",
     "p = np.empty((0, 8), dtype=float)\n",
-    "p = np.append(p, [[7, 5, 23, 0, 1, 1, 1, 1]], axis=0)\n",
+    "p = np.append(p, [[7, 5, -23, 0, 1, 1, 1, 1]], axis=0)\n",
     "p = np.append(p, [[2, 1, 1, 0, 1, 1, 1, 1]], axis=0)\n",
     "p = np.append(p, [[2, 1, 1, 0, 1, 1, 1, 0]], axis=0)"
    ]
@@ -324,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalize(x, norm='l2')"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import scipy.spatial.distance as distance"
    ]
   },
   {
@@ -349,6 +209,76 @@
     "    print('calculated_most_similar_1_paragraph:', calculated_most_similar_1_paragraph)\n",
     "    print('score for most similar paragraph:', sk_sim[calculated_most_similar_1_paragraph])\n",
     "    #     results.append((q_id, actual_paragraph_id,  order_of_the_actual_paragraph_id, calculated_most_similar_1_paragraph, sk_sim[calculated_most_similar_1_paragraph]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q.shape, p.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_ = normalize(p, norm='l1', axis=1)\n",
+    "p1_ = p/np.abs(p).sum(axis=1).reshape(3,1)\n",
+    "np.abs(p).sum(axis=1).reshape(3,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_ = normalize(q, norm='l1', axis=1)\n",
+    "p_ = normalize(p, norm='l1', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "x1_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "np.dot(q_, p_.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosine_similarity(q,p)"
    ]
   }
  ],
