--- a/squad/2_Generate_Vectorized_Pairwise_Cosine_Similarity_Matrix_For_Q_P.ipynb
+++ b/squad/2_Generate_Vectorized_Pairwise_Cosine_Similarity_Matrix_For_Q_P.ipynb
@@ -70,7 +70,7 @@
     "                     })\n",
     "              ]\n",
     "\n",
-    "for norm_type in ['l1', 'l2']:\n",
+    "for norm_type in ['l2']:\n",
     "    print(10*'*', norm_type.upper(),'NORM', 10*'*')\n",
     "    for vals in items:\n",
     "        print(vals['type'], 'are getting processed!!!')\n",
@@ -86,7 +86,7 @@
     "    print('PARA Shape', PARA.shape)\n",
     "    print('Similarities are getting calculated !!!')\n",
     "    results = []\n",
-    "    for q_id, _ in enumerate(tqdm_notebook(QUES, total=len(QUES))):\n",
+    "    for q_id, _ in enumerate(tqdm_notebook(QUES, total=len(QUES-1))):\n",
     "        q_vec = np.array([_]) \n",
     "        sk_sim = cosine_similarity(q_vec,PARA)[0]\n",
     "        actual_paragraph_id = df_qas[df_qas['Question_Id'] == q_id]['Paragraph_Id'].values[0]\n",
@@ -107,15 +107,6 @@
     "    fig.savefig(cos_similarity_results_as_hist_file.format(dataset_type, norm_type))\n",
     "\n",
     "print('Done!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_results = pd.read_csv(cos_similarity_results_file_name).set_index('Question_Id')"
    ]
   }
  ],
